# LateAutumn

./: 1_3.docx  CMakeLists.txt  temp.cpp
.build/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake  compile_commands.json
.build/.cmake/api/v1/reply/: cache-v2-104a565e99051879033a.json  cache-v2-609d1b215d77e93c5e59.json  cmakeFiles-v1-6dd649e325bc442e795c.json  cmakeFiles-v1-faab7eec15162b5383a8.json  codemodel-v2-452ff4de37b94387278b.json  codemodel-v2-c9357e3558eaf1ac0fb8.json  directory-Client-Debug-32ce8e758cccb39b8cc7.json  directory-Network-Debug-fb52488b882b8fe8a274.json  index-2024-12-30T20-08-04-0801.json  index-2025-01-14T17-20-26-0722.json  target-late_autumn_client-Debug-6e6c8d092c16091f851e.json  target-late_autumn_client-Debug-a858588d903277911038.json  target-late_autumn_error_repairing-Debug-9ce8beba2b6d9069ee48.json  target-late_autumn_server-Debug-f6a540a577b8a1fab59d.json  target-late_autumn_server-Debug-fd1b9083ef42a6ed02b6.json  toolchains-v1-5a4d6c32af30641a518b.json
.build/Client/: cmake_install.cmake
.build/Client/data/: a.txt
.build/Network/: cmake_install.cmake
.build/Server/: cmake_install.cmake
.build/Server/data/maps/: map1.map
Client/: CMakeLists.txt  client.cpp
Client/Entities/Block/: Block.cpp  Block.h
Client/Entities/Character_array/: Character_array.cpp  Character_array.h
Client/Entities/Entity/: Entity.cpp  Entity.h
Client/Entities/Movable/: Movable.cpp  Movable.h
Client/Entities/Opponent/: Opponent.cpp  Opponent.h
Client/Entities/Player/: Player.cpp  Player.h
Client/Entities/Text/: Text.cpp  Text.h
Client/Game/: Game.cpp  Game.h
Client/Map/: Map.cpp  Map.h
Client/Network/: Network.cpp  Network.h
Client/RenderWindow/: RenderWindow.cpp  RenderWindow.h
Client/Utils/: utils.cpp  utils.h
Client/data/maps/: map1.map
Network/: CMakeLists.txt  error_repairing.cpp  error_repairing.h
Server/: CMakeLists.txt  check_server.py  server.cpp
Server/Network/: Network.cpp  Network.h
Server/Players/: Players.cpp  Players.h
